--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -215,6 +215,8 @@
                         padding: 5px;
                         background-color: #f3f4fa;
                         img{
+                            background-color: #000;
+                            border-radius: 50%;
                             max-width:27px;
                             max-height: 100%;
                         }
