--- a/css/dark-theme.css
+++ b/css/dark-theme.css
@@ -384,9 +384,12 @@
     border-color: #3E3E3E;
     background-color: #000; }
   .theme-dark .table-cover .custom-table .td-action-btn {
-    border-color: #000; }
-    .theme-dark .table-cover .custom-table .td-action-btn:hover img {
-      border-color: #fff; }
+    border-color: #000;
+    background-color: #000; }
+    .theme-dark .table-cover .custom-table .td-action-btn .icon-light {
+      display: none; }
+    .theme-dark .table-cover .custom-table .td-action-btn .icon-dark {
+      display: block; }
   .theme-dark .table-cover .custom-table .td-action-btn .edit-icon {
     filter: grayscale(1) invert(1) brightness(2);
     border-color: #fff; }
@@ -591,7 +594,9 @@
   .theme-dark input:-webkit-autofill:focus,
   .theme-dark textarea:-webkit-autofill,
   .theme-dark textarea:-webkit-autofill:focus {
-    -webkit-text-fill-color: #fff; }
+    -webkit-text-fill-color: #fff;
+    -webkit-background-clip: text;
+    box-shadow: inset 0 0 20px 20px #000 !important; }
   .theme-dark .custom-modal.crate-stake-modal .inp-block-modal .custom-inp:-webkit-autofill {
     -webkit-text-fill-color: #fff; }
   .theme-dark .nav-block .navbar-collapse-block .navbar-ul .nav-item .nav-link .nav-label {
