--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -236,6 +236,7 @@
         color: #2E4276;
         padding-right: 15px; }
       .portfolio-sec .portfolio-card .my-portfolio-content .sm-table-block .locked-tab-row .tab-val {
+        flex-shrink: 0;
         flex-grow: 0;
         font-size: 16px;
         font-weight: 600;
