--- a/scss/common.scss
+++ b/scss/common.scss
@@ -371,6 +371,10 @@ button{
         width: 100%;
         padding-top: 15px;
     }
+    .sec-title-block.sec-title-filter.stake-filter-single{
+        width: auto;
+        padding-top: 0;
+    }
 }
 .title-search-box{
     .btn{
@@ -479,6 +483,7 @@ button{
     .css-1u9des2-indicatorSeparator{
         display: none;
     }
+    .css-15lsz6c-indicatorContainer, 
     .css-1xc3v61-indicatorContainer{
         padding-right: 0;
     }
