--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -175,7 +175,7 @@
       .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-det {
         padding-left: 20px; }
         .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-det .c-label {
-          color: #8393BA;
+          color: #2E4276;
           font-size: 14px;
           margin-bottom: 2px; }
         .portfolio-sec .portfolio-card .my-portfolio-content .coin-det-cover .coin-det-row .c-det .props-value {
