--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -224,7 +224,7 @@
                     .c-det{
                         padding-left: 20px;
                         .c-label{
-                            color: #8393BA;
+                            color: #2E4276;
                             font-size: 14px;
                             margin-bottom: 2px;
                         }
