--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -6,6 +6,9 @@
     .my-portfolio-col{
         flex: 0 0 auto;
         width: 440px;
+        .portfolio-card{
+            height: auto;
+        }
     }
     .portfolio-col{
         margin-bottom: 12px;
@@ -141,7 +144,7 @@
     }
     .portfolio-card{
         background-color: $primary-light;
-        // height: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         padding: 28px;
