--- a/scss/home.scss
+++ b/scss/home.scss
@@ -68,6 +68,7 @@
         flex-direction: column;
         color: $primary-dark;
         border-radius: 13px;
+        overflow: hidden;
         .top-block{
             flex: 1 1 auto;
         }
