--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1011,4 +1011,7 @@ $dark-block-2: #2B2C2E;
             background-color: #000;
         }
     }
+    .stake-modal .modal-body .stake-min-row .stake-min-block{
+        color: #B2B2B2;
+    }
 }
