--- a/css/staking.css
+++ b/css/staking.css
@@ -565,6 +565,29 @@
     padding: 6px;
     height: 38px;
     margin-right: 8px; }
+  .stake-modal .modal-body .stake-min-row {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px; }
+    @media (max-width: 1679px) {
+      .stake-modal .modal-body .stake-min-row {
+        margin-bottom: 15px; } }
+    .stake-modal .modal-body .stake-min-row .stake-min-block {
+      font-size: 14px;
+      color: #8393BA;
+      margin-bottom: 10px; }
+      @media (max-width: 1679px) {
+        .stake-modal .modal-body .stake-min-row .stake-min-block {
+          font-size: 13px; } }
+      .stake-modal .modal-body .stake-min-row .stake-min-block:first-child {
+        margin-right: 65px; }
+        @media (max-width: 579px) {
+          .stake-modal .modal-body .stake-min-row .stake-min-block:first-child {
+            margin-right: 35px; } }
+      .stake-modal .modal-body .stake-min-row .stake-min-block .val {
+        display: inline-block;
+        padding-left: 6px; }
   .stake-modal .modal-body .lock-period {
     color: #8393BA;
     font-size: 16px;
