--- a/scss/common.scss
+++ b/scss/common.scss
@@ -220,19 +220,22 @@ button{
         }
     }
     .sec-title-filter .title-search-box .input-group{
-        width: 100%;
         height: 40px;
+        width: 240px;
+        .btn{
+            padding-left: 5px;
+        }
     }    
 }
 @media($sm-579){
-    .stake-title-filter .title-search-box{
-        width: 200px;
-    }
     .filter-wrapper .filter-nav-btn{
         margin-right: 10px;
     }
 }
 @media($sm-479){
+    .sec-title-filter .title-search-box .input-group{
+        width: 100%;
+    }
     .filter-wrapper .filter-nav-btn {
         min-width: auto;
     }
@@ -407,13 +410,27 @@ button{
 @media($sm-1679){
     .title-search-box .input-group{
         height: 38px;
-        width: 280px;
+        width: 290px;
     }
 }
 @media($sm-1199){
     .title-search-box .input-group{
-        width: 240px;
+        width: 270px;
         padding-right: 5px;
+        .form-control{
+            padding-right: 0;
+        }
+    }
+}
+@media($sm-991){
+    .title-search-box .input-group{
+        width: 270px;
+        padding-right: 5px;
+        .form-control{
+            padding-right: 0;
+            padding-left: 15px;
+            font-size: 13px;
+        }
     }
 }
 .inp-block{
