Staking page img

--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -360,8 +360,8 @@
             margin-bottom: 15px;
             .img-txt
             {
-                display:flex;
-                align-items: center;
+                // display:flex;
+                // align-items: center;
                 flex-shrink: 0;
             }
             @media(max-width:991px)
