--- a/css/side-nav.css
+++ b/css/side-nav.css
@@ -14,7 +14,9 @@
   background: #fff;
   box-shadow: 0px 4px 112px 0px rgba(0, 0, 0, 0.08);
   border-radius: 0 16px 0 0;
-  transition: .3s; }
+  transition: .3s;
+  border-top: solid 1px transparent;
+  border-right: solid 1px transparent; }
   .nav-block .nav-block-inner {
     display: flex;
     flex-direction: column;
