--- a/scss/side-nav.scss
+++ b/scss/side-nav.scss
@@ -5,6 +5,8 @@
     box-shadow: 0px 4px 112px 0px rgba(0, 0, 0, 0.08);
     border-radius: 0 16px 0 0;
     transition: .3s;
+    border-top: solid 1px transparent;
+    border-right: solid 1px transparent;
     .nav-block-inner{
         display: flex;
         flex-direction: column;
