--- a/css/staking.css
+++ b/css/staking.css
@@ -578,6 +578,9 @@
       @media (max-width: 1679px) {
         .stake-modal .modal-body .stake-min-row .stake-min-block {
           font-size: 13px; } }
+      @media (max-width: 579px) {
+        .stake-modal .modal-body .stake-min-row .stake-min-block {
+          font-size: 12px; } }
       .stake-modal .modal-body .stake-min-row .stake-min-block:first-child {
         margin-right: 65px; }
         @media (max-width: 579px) {
@@ -629,6 +632,11 @@
       @media (max-width: 1679px) {
         .stake-modal .modal-body .input-group .form-control {
           height: 50px; } }
+      @media (max-width: 479px) {
+        .stake-modal .modal-body .input-group .form-control {
+          padding-left: 15px;
+          height: 46px;
+          font-size: 13px; } }
     .stake-modal .modal-body .input-group .badges {
       position: absolute;
       right: 2px;
@@ -662,6 +670,11 @@
             padding: 6px 15px;
             font-size: 11px;
             margin-right: 4px; } }
+        @media (max-width: 479px) {
+          .stake-modal .modal-body .input-group .badges .num-badge {
+            padding: 6px;
+            font-size: 10px;
+            margin-right: 2px; } }
         .stake-modal .modal-body .input-group .badges .num-badge:hover {
           border-color: #2966FF !important; }
       .stake-modal .modal-body .input-group .badges .max-active {
@@ -713,9 +726,9 @@
         @media (max-width: 1679px) {
           .stake-modal .modal-body .rwd-inner.rwd-col-inner .detail-outer {
             margin-bottom: 20px; } }
-        @media (max-width: 400px) {
+        @media (max-width: 420px) {
           .stake-modal .modal-body .rwd-inner.rwd-col-inner .detail-outer {
-            width: 50%; } }
+            width: 100%; } }
         .stake-modal .modal-body .rwd-inner.rwd-col-inner .detail-outer .props-col {
           padding-top: 6px;
           width: 100%; }
@@ -775,6 +788,9 @@
       .stake-modal .modal-body .btn-stake {
         height: 50px;
         font-size: 14px; } }
+    @media (max-width: 579px) {
+      .stake-modal .modal-body .btn-stake {
+        height: 46px; } }
   .stake-modal .modal-body .withdraw-btn {
     background: #DFAB45; }
   .stake-modal .modal-body .btn-default {
