--- a/css/staking.css
+++ b/css/staking.css
@@ -249,6 +249,9 @@
     padding-top: 15px;
     display: flex;
     margin-bottom: 15px; }
+    @media (max-width: 1679px) {
+      .card-section-outer .top-block .heading-txt {
+        padding-top: 8px; } }
     .card-section-outer .top-block .heading-txt .img-txt {
       flex-shrink: 0; }
     @media (max-width: 991px) {
@@ -261,9 +264,6 @@
           max-height: 75px; } }
     .card-section-outer .top-block .heading-txt .desc-content {
       padding-top: 10px; }
-      @media (max-width: 1679px) {
-        .card-section-outer .top-block .heading-txt .desc-content {
-          padding-top: 5px; } }
       .card-section-outer .top-block .heading-txt .desc-content h2 {
         display: flex;
         align-items: center;
