reward modal  block

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1346,11 +1346,11 @@
         padding: 0 35px 25px;
     }
 }
-@media($sm-579){
-    .claim-reward-modal .claim-reward-modal-body .claim-count-block h4{
-        font-size: 21px;
-    }
-}
+// @media($sm-579){
+//     .claim-reward-modal .claim-reward-modal-body .claim-count-block h4{
+//         font-size: 21px;
+//     }
+// }
 @media($sm-479){
     .claim-reward-modal .claim-reward-modal-body {
         padding: 0 15px 30px;
