--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1228,6 +1228,7 @@
                     color: $label-txt-blue;
                     font-size: 14px;
                     font-weight: 600;
+                    text-align: right;
                     &.txt-green{
                         color: $success-green;
                     }
