--- a/css/modal.css
+++ b/css/modal.css
@@ -466,7 +466,7 @@
       padding: 0 60px 30px; } }
   @media (max-width: 1199px) {
     .crate-stake-modal .crate-stake-modal-body {
-      padding: 0 40px 30px; } }
+      padding: 0 20px 30px; } }
   @media (max-width: 479px) {
     .crate-stake-modal .crate-stake-modal-body {
       padding: 0 0 15px; } }
@@ -479,6 +479,9 @@
   padding-top: 15px; }
 .crate-stake-modal .inp-block-modal .form-label img {
   max-height: 60px; }
+@media (max-width: 1679px) {
+  .crate-stake-modal .inp-block-modal {
+    margin-bottom: 20px; } }
 .crate-stake-modal .img-box-cover {
   display: flex;
   align-items: center;
@@ -1116,13 +1119,13 @@
     padding: 0 0 20px; } }
 .custom-modal .inp-block-modal textarea.custom-inp-img-area {
   height: 132px;
+  vertical-align: top;
   resize: none; }
   @media (max-width: 1679px) {
     .custom-modal .inp-block-modal textarea.custom-inp-img-area {
       height: 102px; } }
 .custom-modal .banner-img-block .custom-inp {
-  padding: 0;
-  overflow: hidden; }
+  padding: 0; }
 .custom-modal .banner-img-block .form-label {
   display: flex;
   align-items: center;
@@ -1144,14 +1147,16 @@
     opacity: 0;
     overflow: hidden;
     position: absolute;
-    z-index: -1; }
+    z-index: -1;
+    border-radius: 8px; }
   .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    height: 130px; }
+    height: 130px;
+    border-radius: 8px; }
     @media (max-width: 1679px) {
       .custom-modal .banner-img-block .inp-banner-box .banner-img-inp-label {
         height: 100px; } }
