--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -591,7 +591,7 @@
             padding: 0 60px 30px;
         }
         @media($sm-1199){
-            padding: 0 40px 30px;
+            padding: 0 20px 30px;
         }
         @media($sm-479){
             padding: 0 0 15px;
@@ -611,6 +611,11 @@
     .inp-block-modal .form-label{
         img{
             max-height: 60px;
+        }
+    }
+    .inp-block-modal{
+        @media($sm-1679){
+            margin-bottom: 20px;
         }
     }
     .img-box-cover{
@@ -1502,6 +1507,7 @@
 .custom-modal{
     .inp-block-modal textarea.custom-inp-img-area{
         height: 132px;
+        vertical-align: top;
         resize: none;
         @media ($sm-1679) {
             height: 102px;
@@ -1510,7 +1516,7 @@
     .banner-img-block{
         .custom-inp{
             padding: 0;
-            overflow: hidden;
+            // overflow: hidden;
         }
         .form-label{
             display: flex;
@@ -1538,6 +1544,7 @@
                 overflow: hidden;
                 position: absolute;
                 z-index: -1;
+                border-radius: 8px;
             }
             .banner-img-inp-label{
                 width: 100%;
@@ -1546,6 +1553,7 @@
                 justify-content: center;
                 cursor: pointer;
                 height: 130px;
+                border-radius: 8px;
                 @media ($sm-1679) {
                     height: 100px;
                 }
