--- a/scss/staking.scss
+++ b/scss/staking.scss
@@ -392,7 +392,7 @@
                 {
                     margin-top: 5px;
                     padding-left: 12px;
-                    max-height: 40px;
+                    // max-height: 40px;
                     overflow: hidden;
                     text-align: left;
                 }
